<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.worldline.in.worldlineipgsdk.MainActivity"
   android:orientation="vertical">


    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_transaction_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="32dp" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_transaction_card_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_capture"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_transaction_standard"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_transaction_standard"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btn_transaction_standard"
        app:layout_constraintHorizontal_bias="0.594" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_transaction_card_capture"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btn_transaction_card_capture"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_transaction_card_capture"
        app:layout_constraintHorizontal_bias="0.533" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="@+id/btn_status"
        app:layout_constraintRight_toRightOf="@+id/btn_status"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_status"
        app:layout_constraintHorizontal_bias="0.454"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refund"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_cancel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.34" />
</LinearLayout>
